syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.nbs.console.pb";
option java_outer_classname = "RpcGossipMessage";

package pb;

service GossipTask {

    rpc startService(StartRequest) returns (StartResponse) {}
}

message StartRequest{
    string cmd = 1;
}

message StartResponse{
    string result = 1;
}